# PenguinSnap

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: aur-publish.yml
packaging/: PKGBUILD
packaging/aur/: .SRCINFO  PKGBUILD
resources/: penguinsnap.desktop  resources.qrc
src/: application.cpp  application.h  countdownoverlay.cpp  countdownoverlay.h  hotkeymanager.cpp  hotkeymanager.h  main.cpp  ocrmanager.cpp  ocrmanager.h  outputmanager.cpp  outputmanager.h  preferencesdialog.cpp  preferencesdialog.h  screenshotmanager.cpp  screenshotmanager.h  selectionoverlay.cpp  selectionoverlay.h  settingsmanager.cpp  settingsmanager.h  windowoverlay.cpp  windowoverlay.h
